# EntropyRank

./: .gitignore  README.md  pyproject.toml
src/entropyrank/: EntropyRank.py  __init__.py  requirements.txt  word_statistics.json
src/eval/: TextRank.py  dataset_utils.py  evaluation-requirements.txt  evaluation_demo.ipynb  metrics.py  results_rounded.json
